[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stpa-hfmea-ed-analyzer"
version = "0.2.0"
description = "Initial runnable MVP scaffold for ED triage + handoff STPA/HFMEA analyzer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic",
  "pandas",
  "pytest"
]

[tool.setuptools.packages.find]
include = ["stpa_tool*"]
